Fixed css alignment in dates

--- a/app/assets/stylesheets/scaffolds.css.scss
+++ b/app/assets/stylesheets/scaffolds.css.scss
@@ -324,10 +324,10 @@ input[type="radio"]:checked + label::before, input[type="checkbox"]:checked + la
       font-size: 0.85em;
 
       span {
-        margin-left: 5px;
+        margin-left: 3px;
 
         span {
-          margin-left: 112px;
+          margin-left: 113px;
         }
       }
 
